[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "value_iteration"
version = "1.0.0"
maintainers = [
  { name="Niharika Reddy Peddinenikalva", email="n.peddinenikalva@lancaster.ac.uk" },
]
authors = [
  { name="Niharika Reddy Peddinenikalva", email="n.peddinenikalva@lancaster.ac.uk"},
]
description = "Value iteration to find the optimal policy for a Markov Decision Process"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "typing",
]

[project.urls]
homepage = "https://github.com/turtlesoul25/value_iteration"